Changed visibility icon color to #3f3f3f, deleted flaticon url, Fixed error message overflow-x bug and changed landing background-image

--- a/imports/ui/stylesheets/base.scss
+++ b/imports/ui/stylesheets/base.scss
@@ -6,6 +6,7 @@
 
 html {
   height: 100% !important;
+  overflow-x: hidden;
 }
 
 body {
@@ -57,4 +58,29 @@ input:focus, select:focus, textarea:focus, button:focus {
   background-position: center;
   background-repeat: no-repeat;
   background-color: #fff;
+}
+
+/* loading */
+.loading {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  .loader {
+    position: absolute;
+    left: calc(50% - 25px);
+    top: calc(50% - 25px);
+    border: 5px solid #f3f3f3; /* Light grey */
+    border-top: 5px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+  }
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  25% { border-top-color: #1abc9c; }
+  50% { border-top-color: #f1c40f; }
+  75% { border-top-color: #e74c3c; }
+  100% { transform: rotate(720deg); border-top-color: #3498db; }
 }
